parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     empty -> <empty>
Rule 2     conditional -> IF expression THEN instruction
Rule 3     conditional -> IF expression THEN instruction ELSE instruction
Rule 4     loop -> WHILE expression DO instruction
Rule 5     assignment -> NAME ASSIGN expression
Rule 6     show -> PRINT LEFTBRACKET expression RIGHTBRACKET
Rule 7     input -> NAME ASSIGN READ
Rule 8     instruction -> conditional
Rule 9     instruction -> loop
Rule 10    instruction -> assignment NEXTINST
Rule 11    instruction -> show NEXTINST
Rule 12    instruction -> input NEXTINST
Rule 13    instruction -> WLEFTBRACKET instruction WRIGHTBRACKET
Rule 14    instruction -> WLEFTBRACKET code WRIGHTBRACKET
Rule 15    expression -> INT
Rule 16    expression -> NAME
Rule 17    expression -> LEFTBRACKET expression RIGHTBRACKET
Rule 18    expression -> MINUS expression
Rule 19    expression -> expression PLUS expression
Rule 20    expression -> expression MINUS expression
Rule 21    expression -> expression MULTIPLY expression
Rule 22    expression -> expression DIVIDE expression
Rule 23    expression -> expression EQUALS expression
Rule 24    expression -> expression LOWER expression
Rule 25    expression -> expression GREATER expression
Rule 26    expression -> expression NOTEQ expression
Rule 27    expression -> expression LOWEREQ expression
Rule 28    expression -> expression GREATEREQ expression
Rule 29    code -> instruction instruction
Rule 30    code -> code instruction
Rule 31    code -> instruction code
Rule 32    code -> code code
Rule 33    program -> code
Rule 34    program -> instruction

Terminals, with rules where they appear

ASSIGN               : 5 7
DIVIDE               : 22
DO                   : 4
ELSE                 : 3
EQUALS               : 23
GREATER              : 25
GREATEREQ            : 28
IF                   : 2 3
INT                  : 15
LEFTBRACKET          : 6 17
LOWER                : 24
LOWEREQ              : 27
MINUS                : 18 20
MULTIPLY             : 21
NAME                 : 5 7 16
NEXTINST             : 10 11 12
NOTEQ                : 26
PLUS                 : 19
PRINT                : 6
READ                 : 7
RIGHTBRACKET         : 6 17
THEN                 : 2 3
WHILE                : 4
WLEFTBRACKET         : 13 14
WRIGHTBRACKET        : 13 14
error                : 

Nonterminals, with rules where they appear

assignment           : 10
code                 : 14 30 31 32 32 33
conditional          : 8
empty                : 
expression           : 2 3 4 5 6 17 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28
input                : 12
instruction          : 2 3 3 4 13 29 29 30 31 34
loop                 : 9
program              : 0
show                 : 11

Parsing method: LALR

state 0

    (0) S' -> . program
    (33) program -> . code
    (34) program -> . instruction
    (29) code -> . instruction instruction
    (30) code -> . code instruction
    (31) code -> . instruction code
    (32) code -> . code code
    (8) instruction -> . conditional
    (9) instruction -> . loop
    (10) instruction -> . assignment NEXTINST
    (11) instruction -> . show NEXTINST
    (12) instruction -> . input NEXTINST
    (13) instruction -> . WLEFTBRACKET instruction WRIGHTBRACKET
    (14) instruction -> . WLEFTBRACKET code WRIGHTBRACKET
    (2) conditional -> . IF expression THEN instruction
    (3) conditional -> . IF expression THEN instruction ELSE instruction
    (4) loop -> . WHILE expression DO instruction
    (5) assignment -> . NAME ASSIGN expression
    (6) show -> . PRINT LEFTBRACKET expression RIGHTBRACKET
    (7) input -> . NAME ASSIGN READ

    WLEFTBRACKET    shift and go to state 9
    IF              shift and go to state 10
    WHILE           shift and go to state 11
    NAME            shift and go to state 12
    PRINT           shift and go to state 13

    program                        shift and go to state 1
    code                           shift and go to state 2
    instruction                    shift and go to state 3
    conditional                    shift and go to state 4
    loop                           shift and go to state 5
    assignment                     shift and go to state 6
    show                           shift and go to state 7
    input                          shift and go to state 8

state 1

    (0) S' -> program .



state 2

    (33) program -> code .
    (30) code -> code . instruction
    (32) code -> code . code
    (8) instruction -> . conditional
    (9) instruction -> . loop
    (10) instruction -> . assignment NEXTINST
    (11) instruction -> . show NEXTINST
    (12) instruction -> . input NEXTINST
    (13) instruction -> . WLEFTBRACKET instruction WRIGHTBRACKET
    (14) instruction -> . WLEFTBRACKET code WRIGHTBRACKET
    (29) code -> . instruction instruction
    (30) code -> . code instruction
    (31) code -> . instruction code
    (32) code -> . code code
    (2) conditional -> . IF expression THEN instruction
    (3) conditional -> . IF expression THEN instruction ELSE instruction
    (4) loop -> . WHILE expression DO instruction
    (5) assignment -> . NAME ASSIGN expression
    (6) show -> . PRINT LEFTBRACKET expression RIGHTBRACKET
    (7) input -> . NAME ASSIGN READ

    $end            reduce using rule 33 (program -> code .)
    WLEFTBRACKET    shift and go to state 9
    IF              shift and go to state 10
    WHILE           shift and go to state 11
    NAME            shift and go to state 12
    PRINT           shift and go to state 13

    code                           shift and go to state 14
    instruction                    shift and go to state 15
    conditional                    shift and go to state 4
    loop                           shift and go to state 5
    assignment                     shift and go to state 6
    show                           shift and go to state 7
    input                          shift and go to state 8

state 3

    (34) program -> instruction .
    (29) code -> instruction . instruction
    (31) code -> instruction . code
    (8) instruction -> . conditional
    (9) instruction -> . loop
    (10) instruction -> . assignment NEXTINST
    (11) instruction -> . show NEXTINST
    (12) instruction -> . input NEXTINST
    (13) instruction -> . WLEFTBRACKET instruction WRIGHTBRACKET
    (14) instruction -> . WLEFTBRACKET code WRIGHTBRACKET
    (29) code -> . instruction instruction
    (30) code -> . code instruction
    (31) code -> . instruction code
    (32) code -> . code code
    (2) conditional -> . IF expression THEN instruction
    (3) conditional -> . IF expression THEN instruction ELSE instruction
    (4) loop -> . WHILE expression DO instruction
    (5) assignment -> . NAME ASSIGN expression
    (6) show -> . PRINT LEFTBRACKET expression RIGHTBRACKET
    (7) input -> . NAME ASSIGN READ

    $end            reduce using rule 34 (program -> instruction .)
    WLEFTBRACKET    shift and go to state 9
    IF              shift and go to state 10
    WHILE           shift and go to state 11
    NAME            shift and go to state 12
    PRINT           shift and go to state 13

    instruction                    shift and go to state 16
    code                           shift and go to state 17
    conditional                    shift and go to state 4
    loop                           shift and go to state 5
    assignment                     shift and go to state 6
    show                           shift and go to state 7
    input                          shift and go to state 8

state 4

    (8) instruction -> conditional .

    WLEFTBRACKET    reduce using rule 8 (instruction -> conditional .)
    IF              reduce using rule 8 (instruction -> conditional .)
    WHILE           reduce using rule 8 (instruction -> conditional .)
    NAME            reduce using rule 8 (instruction -> conditional .)
    PRINT           reduce using rule 8 (instruction -> conditional .)
    $end            reduce using rule 8 (instruction -> conditional .)
    WRIGHTBRACKET   reduce using rule 8 (instruction -> conditional .)
    ELSE            reduce using rule 8 (instruction -> conditional .)


state 5

    (9) instruction -> loop .

    WLEFTBRACKET    reduce using rule 9 (instruction -> loop .)
    IF              reduce using rule 9 (instruction -> loop .)
    WHILE           reduce using rule 9 (instruction -> loop .)
    NAME            reduce using rule 9 (instruction -> loop .)
    PRINT           reduce using rule 9 (instruction -> loop .)
    $end            reduce using rule 9 (instruction -> loop .)
    WRIGHTBRACKET   reduce using rule 9 (instruction -> loop .)
    ELSE            reduce using rule 9 (instruction -> loop .)


state 6

    (10) instruction -> assignment . NEXTINST

    NEXTINST        shift and go to state 18


state 7

    (11) instruction -> show . NEXTINST

    NEXTINST        shift and go to state 19


state 8

    (12) instruction -> input . NEXTINST

    NEXTINST        shift and go to state 20


state 9

    (13) instruction -> WLEFTBRACKET . instruction WRIGHTBRACKET
    (14) instruction -> WLEFTBRACKET . code WRIGHTBRACKET
    (8) instruction -> . conditional
    (9) instruction -> . loop
    (10) instruction -> . assignment NEXTINST
    (11) instruction -> . show NEXTINST
    (12) instruction -> . input NEXTINST
    (13) instruction -> . WLEFTBRACKET instruction WRIGHTBRACKET
    (14) instruction -> . WLEFTBRACKET code WRIGHTBRACKET
    (29) code -> . instruction instruction
    (30) code -> . code instruction
    (31) code -> . instruction code
    (32) code -> . code code
    (2) conditional -> . IF expression THEN instruction
    (3) conditional -> . IF expression THEN instruction ELSE instruction
    (4) loop -> . WHILE expression DO instruction
    (5) assignment -> . NAME ASSIGN expression
    (6) show -> . PRINT LEFTBRACKET expression RIGHTBRACKET
    (7) input -> . NAME ASSIGN READ

    WLEFTBRACKET    shift and go to state 9
    IF              shift and go to state 10
    WHILE           shift and go to state 11
    NAME            shift and go to state 12
    PRINT           shift and go to state 13

    instruction                    shift and go to state 21
    code                           shift and go to state 22
    conditional                    shift and go to state 4
    loop                           shift and go to state 5
    assignment                     shift and go to state 6
    show                           shift and go to state 7
    input                          shift and go to state 8

state 10

    (2) conditional -> IF . expression THEN instruction
    (3) conditional -> IF . expression THEN instruction ELSE instruction
    (15) expression -> . INT
    (16) expression -> . NAME
    (17) expression -> . LEFTBRACKET expression RIGHTBRACKET
    (18) expression -> . MINUS expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression MULTIPLY expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . expression EQUALS expression
    (24) expression -> . expression LOWER expression
    (25) expression -> . expression GREATER expression
    (26) expression -> . expression NOTEQ expression
    (27) expression -> . expression LOWEREQ expression
    (28) expression -> . expression GREATEREQ expression

    INT             shift and go to state 24
    NAME            shift and go to state 25
    LEFTBRACKET     shift and go to state 26
    MINUS           shift and go to state 27

    expression                     shift and go to state 23

state 11

    (4) loop -> WHILE . expression DO instruction
    (15) expression -> . INT
    (16) expression -> . NAME
    (17) expression -> . LEFTBRACKET expression RIGHTBRACKET
    (18) expression -> . MINUS expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression MULTIPLY expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . expression EQUALS expression
    (24) expression -> . expression LOWER expression
    (25) expression -> . expression GREATER expression
    (26) expression -> . expression NOTEQ expression
    (27) expression -> . expression LOWEREQ expression
    (28) expression -> . expression GREATEREQ expression

    INT             shift and go to state 24
    NAME            shift and go to state 25
    LEFTBRACKET     shift and go to state 26
    MINUS           shift and go to state 27

    expression                     shift and go to state 28

state 12

    (5) assignment -> NAME . ASSIGN expression
    (7) input -> NAME . ASSIGN READ

    ASSIGN          shift and go to state 29


state 13

    (6) show -> PRINT . LEFTBRACKET expression RIGHTBRACKET

    LEFTBRACKET     shift and go to state 30


state 14

    (32) code -> code code .
    (30) code -> code . instruction
    (32) code -> code . code
    (8) instruction -> . conditional
    (9) instruction -> . loop
    (10) instruction -> . assignment NEXTINST
    (11) instruction -> . show NEXTINST
    (12) instruction -> . input NEXTINST
    (13) instruction -> . WLEFTBRACKET instruction WRIGHTBRACKET
    (14) instruction -> . WLEFTBRACKET code WRIGHTBRACKET
    (29) code -> . instruction instruction
    (30) code -> . code instruction
    (31) code -> . instruction code
    (32) code -> . code code
    (2) conditional -> . IF expression THEN instruction
    (3) conditional -> . IF expression THEN instruction ELSE instruction
    (4) loop -> . WHILE expression DO instruction
    (5) assignment -> . NAME ASSIGN expression
    (6) show -> . PRINT LEFTBRACKET expression RIGHTBRACKET
    (7) input -> . NAME ASSIGN READ

  ! shift/reduce conflict for WLEFTBRACKET resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for NAME resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
    $end            reduce using rule 32 (code -> code code .)
    WRIGHTBRACKET   reduce using rule 32 (code -> code code .)
    WLEFTBRACKET    shift and go to state 9
    IF              shift and go to state 10
    WHILE           shift and go to state 11
    NAME            shift and go to state 12
    PRINT           shift and go to state 13

  ! WLEFTBRACKET    [ reduce using rule 32 (code -> code code .) ]
  ! IF              [ reduce using rule 32 (code -> code code .) ]
  ! WHILE           [ reduce using rule 32 (code -> code code .) ]
  ! NAME            [ reduce using rule 32 (code -> code code .) ]
  ! PRINT           [ reduce using rule 32 (code -> code code .) ]

    code                           shift and go to state 14
    instruction                    shift and go to state 15
    conditional                    shift and go to state 4
    loop                           shift and go to state 5
    assignment                     shift and go to state 6
    show                           shift and go to state 7
    input                          shift and go to state 8

state 15

    (30) code -> code instruction .
    (29) code -> instruction . instruction
    (31) code -> instruction . code
    (8) instruction -> . conditional
    (9) instruction -> . loop
    (10) instruction -> . assignment NEXTINST
    (11) instruction -> . show NEXTINST
    (12) instruction -> . input NEXTINST
    (13) instruction -> . WLEFTBRACKET instruction WRIGHTBRACKET
    (14) instruction -> . WLEFTBRACKET code WRIGHTBRACKET
    (29) code -> . instruction instruction
    (30) code -> . code instruction
    (31) code -> . instruction code
    (32) code -> . code code
    (2) conditional -> . IF expression THEN instruction
    (3) conditional -> . IF expression THEN instruction ELSE instruction
    (4) loop -> . WHILE expression DO instruction
    (5) assignment -> . NAME ASSIGN expression
    (6) show -> . PRINT LEFTBRACKET expression RIGHTBRACKET
    (7) input -> . NAME ASSIGN READ

  ! shift/reduce conflict for WLEFTBRACKET resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for NAME resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
    $end            reduce using rule 30 (code -> code instruction .)
    WRIGHTBRACKET   reduce using rule 30 (code -> code instruction .)
    WLEFTBRACKET    shift and go to state 9
    IF              shift and go to state 10
    WHILE           shift and go to state 11
    NAME            shift and go to state 12
    PRINT           shift and go to state 13

  ! WLEFTBRACKET    [ reduce using rule 30 (code -> code instruction .) ]
  ! IF              [ reduce using rule 30 (code -> code instruction .) ]
  ! WHILE           [ reduce using rule 30 (code -> code instruction .) ]
  ! NAME            [ reduce using rule 30 (code -> code instruction .) ]
  ! PRINT           [ reduce using rule 30 (code -> code instruction .) ]

    code                           shift and go to state 17
    instruction                    shift and go to state 16
    conditional                    shift and go to state 4
    loop                           shift and go to state 5
    assignment                     shift and go to state 6
    show                           shift and go to state 7
    input                          shift and go to state 8

state 16

    (29) code -> instruction instruction .
    (29) code -> instruction . instruction
    (31) code -> instruction . code
    (8) instruction -> . conditional
    (9) instruction -> . loop
    (10) instruction -> . assignment NEXTINST
    (11) instruction -> . show NEXTINST
    (12) instruction -> . input NEXTINST
    (13) instruction -> . WLEFTBRACKET instruction WRIGHTBRACKET
    (14) instruction -> . WLEFTBRACKET code WRIGHTBRACKET
    (29) code -> . instruction instruction
    (30) code -> . code instruction
    (31) code -> . instruction code
    (32) code -> . code code
    (2) conditional -> . IF expression THEN instruction
    (3) conditional -> . IF expression THEN instruction ELSE instruction
    (4) loop -> . WHILE expression DO instruction
    (5) assignment -> . NAME ASSIGN expression
    (6) show -> . PRINT LEFTBRACKET expression RIGHTBRACKET
    (7) input -> . NAME ASSIGN READ

  ! shift/reduce conflict for WLEFTBRACKET resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for NAME resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
    $end            reduce using rule 29 (code -> instruction instruction .)
    WRIGHTBRACKET   reduce using rule 29 (code -> instruction instruction .)
    WLEFTBRACKET    shift and go to state 9
    IF              shift and go to state 10
    WHILE           shift and go to state 11
    NAME            shift and go to state 12
    PRINT           shift and go to state 13

  ! WLEFTBRACKET    [ reduce using rule 29 (code -> instruction instruction .) ]
  ! IF              [ reduce using rule 29 (code -> instruction instruction .) ]
  ! WHILE           [ reduce using rule 29 (code -> instruction instruction .) ]
  ! NAME            [ reduce using rule 29 (code -> instruction instruction .) ]
  ! PRINT           [ reduce using rule 29 (code -> instruction instruction .) ]

    instruction                    shift and go to state 16
    code                           shift and go to state 17
    conditional                    shift and go to state 4
    loop                           shift and go to state 5
    assignment                     shift and go to state 6
    show                           shift and go to state 7
    input                          shift and go to state 8

state 17

    (31) code -> instruction code .
    (30) code -> code . instruction
    (32) code -> code . code
    (8) instruction -> . conditional
    (9) instruction -> . loop
    (10) instruction -> . assignment NEXTINST
    (11) instruction -> . show NEXTINST
    (12) instruction -> . input NEXTINST
    (13) instruction -> . WLEFTBRACKET instruction WRIGHTBRACKET
    (14) instruction -> . WLEFTBRACKET code WRIGHTBRACKET
    (29) code -> . instruction instruction
    (30) code -> . code instruction
    (31) code -> . instruction code
    (32) code -> . code code
    (2) conditional -> . IF expression THEN instruction
    (3) conditional -> . IF expression THEN instruction ELSE instruction
    (4) loop -> . WHILE expression DO instruction
    (5) assignment -> . NAME ASSIGN expression
    (6) show -> . PRINT LEFTBRACKET expression RIGHTBRACKET
    (7) input -> . NAME ASSIGN READ

  ! shift/reduce conflict for WLEFTBRACKET resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for NAME resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
    $end            reduce using rule 31 (code -> instruction code .)
    WRIGHTBRACKET   reduce using rule 31 (code -> instruction code .)
    WLEFTBRACKET    shift and go to state 9
    IF              shift and go to state 10
    WHILE           shift and go to state 11
    NAME            shift and go to state 12
    PRINT           shift and go to state 13

  ! WLEFTBRACKET    [ reduce using rule 31 (code -> instruction code .) ]
  ! IF              [ reduce using rule 31 (code -> instruction code .) ]
  ! WHILE           [ reduce using rule 31 (code -> instruction code .) ]
  ! NAME            [ reduce using rule 31 (code -> instruction code .) ]
  ! PRINT           [ reduce using rule 31 (code -> instruction code .) ]

    instruction                    shift and go to state 15
    code                           shift and go to state 14
    conditional                    shift and go to state 4
    loop                           shift and go to state 5
    assignment                     shift and go to state 6
    show                           shift and go to state 7
    input                          shift and go to state 8

state 18

    (10) instruction -> assignment NEXTINST .

    WLEFTBRACKET    reduce using rule 10 (instruction -> assignment NEXTINST .)
    IF              reduce using rule 10 (instruction -> assignment NEXTINST .)
    WHILE           reduce using rule 10 (instruction -> assignment NEXTINST .)
    NAME            reduce using rule 10 (instruction -> assignment NEXTINST .)
    PRINT           reduce using rule 10 (instruction -> assignment NEXTINST .)
    $end            reduce using rule 10 (instruction -> assignment NEXTINST .)
    WRIGHTBRACKET   reduce using rule 10 (instruction -> assignment NEXTINST .)
    ELSE            reduce using rule 10 (instruction -> assignment NEXTINST .)


state 19

    (11) instruction -> show NEXTINST .

    WLEFTBRACKET    reduce using rule 11 (instruction -> show NEXTINST .)
    IF              reduce using rule 11 (instruction -> show NEXTINST .)
    WHILE           reduce using rule 11 (instruction -> show NEXTINST .)
    NAME            reduce using rule 11 (instruction -> show NEXTINST .)
    PRINT           reduce using rule 11 (instruction -> show NEXTINST .)
    $end            reduce using rule 11 (instruction -> show NEXTINST .)
    WRIGHTBRACKET   reduce using rule 11 (instruction -> show NEXTINST .)
    ELSE            reduce using rule 11 (instruction -> show NEXTINST .)


state 20

    (12) instruction -> input NEXTINST .

    WLEFTBRACKET    reduce using rule 12 (instruction -> input NEXTINST .)
    IF              reduce using rule 12 (instruction -> input NEXTINST .)
    WHILE           reduce using rule 12 (instruction -> input NEXTINST .)
    NAME            reduce using rule 12 (instruction -> input NEXTINST .)
    PRINT           reduce using rule 12 (instruction -> input NEXTINST .)
    $end            reduce using rule 12 (instruction -> input NEXTINST .)
    WRIGHTBRACKET   reduce using rule 12 (instruction -> input NEXTINST .)
    ELSE            reduce using rule 12 (instruction -> input NEXTINST .)


state 21

    (13) instruction -> WLEFTBRACKET instruction . WRIGHTBRACKET
    (29) code -> instruction . instruction
    (31) code -> instruction . code
    (8) instruction -> . conditional
    (9) instruction -> . loop
    (10) instruction -> . assignment NEXTINST
    (11) instruction -> . show NEXTINST
    (12) instruction -> . input NEXTINST
    (13) instruction -> . WLEFTBRACKET instruction WRIGHTBRACKET
    (14) instruction -> . WLEFTBRACKET code WRIGHTBRACKET
    (29) code -> . instruction instruction
    (30) code -> . code instruction
    (31) code -> . instruction code
    (32) code -> . code code
    (2) conditional -> . IF expression THEN instruction
    (3) conditional -> . IF expression THEN instruction ELSE instruction
    (4) loop -> . WHILE expression DO instruction
    (5) assignment -> . NAME ASSIGN expression
    (6) show -> . PRINT LEFTBRACKET expression RIGHTBRACKET
    (7) input -> . NAME ASSIGN READ

    WRIGHTBRACKET   shift and go to state 31
    WLEFTBRACKET    shift and go to state 9
    IF              shift and go to state 10
    WHILE           shift and go to state 11
    NAME            shift and go to state 12
    PRINT           shift and go to state 13

    instruction                    shift and go to state 16
    code                           shift and go to state 17
    conditional                    shift and go to state 4
    loop                           shift and go to state 5
    assignment                     shift and go to state 6
    show                           shift and go to state 7
    input                          shift and go to state 8

state 22

    (14) instruction -> WLEFTBRACKET code . WRIGHTBRACKET
    (30) code -> code . instruction
    (32) code -> code . code
    (8) instruction -> . conditional
    (9) instruction -> . loop
    (10) instruction -> . assignment NEXTINST
    (11) instruction -> . show NEXTINST
    (12) instruction -> . input NEXTINST
    (13) instruction -> . WLEFTBRACKET instruction WRIGHTBRACKET
    (14) instruction -> . WLEFTBRACKET code WRIGHTBRACKET
    (29) code -> . instruction instruction
    (30) code -> . code instruction
    (31) code -> . instruction code
    (32) code -> . code code
    (2) conditional -> . IF expression THEN instruction
    (3) conditional -> . IF expression THEN instruction ELSE instruction
    (4) loop -> . WHILE expression DO instruction
    (5) assignment -> . NAME ASSIGN expression
    (6) show -> . PRINT LEFTBRACKET expression RIGHTBRACKET
    (7) input -> . NAME ASSIGN READ

    WRIGHTBRACKET   shift and go to state 32
    WLEFTBRACKET    shift and go to state 9
    IF              shift and go to state 10
    WHILE           shift and go to state 11
    NAME            shift and go to state 12
    PRINT           shift and go to state 13

    code                           shift and go to state 14
    instruction                    shift and go to state 15
    conditional                    shift and go to state 4
    loop                           shift and go to state 5
    assignment                     shift and go to state 6
    show                           shift and go to state 7
    input                          shift and go to state 8

state 23

    (2) conditional -> IF expression . THEN instruction
    (3) conditional -> IF expression . THEN instruction ELSE instruction
    (19) expression -> expression . PLUS expression
    (20) expression -> expression . MINUS expression
    (21) expression -> expression . MULTIPLY expression
    (22) expression -> expression . DIVIDE expression
    (23) expression -> expression . EQUALS expression
    (24) expression -> expression . LOWER expression
    (25) expression -> expression . GREATER expression
    (26) expression -> expression . NOTEQ expression
    (27) expression -> expression . LOWEREQ expression
    (28) expression -> expression . GREATEREQ expression

    THEN            shift and go to state 33
    PLUS            shift and go to state 34
    MINUS           shift and go to state 35
    MULTIPLY        shift and go to state 36
    DIVIDE          shift and go to state 37
    EQUALS          shift and go to state 38
    LOWER           shift and go to state 39
    GREATER         shift and go to state 40
    NOTEQ           shift and go to state 41
    LOWEREQ         shift and go to state 42
    GREATEREQ       shift and go to state 43


state 24

    (15) expression -> INT .

    THEN            reduce using rule 15 (expression -> INT .)
    PLUS            reduce using rule 15 (expression -> INT .)
    MINUS           reduce using rule 15 (expression -> INT .)
    MULTIPLY        reduce using rule 15 (expression -> INT .)
    DIVIDE          reduce using rule 15 (expression -> INT .)
    EQUALS          reduce using rule 15 (expression -> INT .)
    LOWER           reduce using rule 15 (expression -> INT .)
    GREATER         reduce using rule 15 (expression -> INT .)
    NOTEQ           reduce using rule 15 (expression -> INT .)
    LOWEREQ         reduce using rule 15 (expression -> INT .)
    GREATEREQ       reduce using rule 15 (expression -> INT .)
    DO              reduce using rule 15 (expression -> INT .)
    RIGHTBRACKET    reduce using rule 15 (expression -> INT .)
    NEXTINST        reduce using rule 15 (expression -> INT .)


state 25

    (16) expression -> NAME .

    THEN            reduce using rule 16 (expression -> NAME .)
    PLUS            reduce using rule 16 (expression -> NAME .)
    MINUS           reduce using rule 16 (expression -> NAME .)
    MULTIPLY        reduce using rule 16 (expression -> NAME .)
    DIVIDE          reduce using rule 16 (expression -> NAME .)
    EQUALS          reduce using rule 16 (expression -> NAME .)
    LOWER           reduce using rule 16 (expression -> NAME .)
    GREATER         reduce using rule 16 (expression -> NAME .)
    NOTEQ           reduce using rule 16 (expression -> NAME .)
    LOWEREQ         reduce using rule 16 (expression -> NAME .)
    GREATEREQ       reduce using rule 16 (expression -> NAME .)
    DO              reduce using rule 16 (expression -> NAME .)
    RIGHTBRACKET    reduce using rule 16 (expression -> NAME .)
    NEXTINST        reduce using rule 16 (expression -> NAME .)


state 26

    (17) expression -> LEFTBRACKET . expression RIGHTBRACKET
    (15) expression -> . INT
    (16) expression -> . NAME
    (17) expression -> . LEFTBRACKET expression RIGHTBRACKET
    (18) expression -> . MINUS expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression MULTIPLY expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . expression EQUALS expression
    (24) expression -> . expression LOWER expression
    (25) expression -> . expression GREATER expression
    (26) expression -> . expression NOTEQ expression
    (27) expression -> . expression LOWEREQ expression
    (28) expression -> . expression GREATEREQ expression

    INT             shift and go to state 24
    NAME            shift and go to state 25
    LEFTBRACKET     shift and go to state 26
    MINUS           shift and go to state 27

    expression                     shift and go to state 44

state 27

    (18) expression -> MINUS . expression
    (15) expression -> . INT
    (16) expression -> . NAME
    (17) expression -> . LEFTBRACKET expression RIGHTBRACKET
    (18) expression -> . MINUS expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression MULTIPLY expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . expression EQUALS expression
    (24) expression -> . expression LOWER expression
    (25) expression -> . expression GREATER expression
    (26) expression -> . expression NOTEQ expression
    (27) expression -> . expression LOWEREQ expression
    (28) expression -> . expression GREATEREQ expression

    INT             shift and go to state 24
    NAME            shift and go to state 25
    LEFTBRACKET     shift and go to state 26
    MINUS           shift and go to state 27

    expression                     shift and go to state 45

state 28

    (4) loop -> WHILE expression . DO instruction
    (19) expression -> expression . PLUS expression
    (20) expression -> expression . MINUS expression
    (21) expression -> expression . MULTIPLY expression
    (22) expression -> expression . DIVIDE expression
    (23) expression -> expression . EQUALS expression
    (24) expression -> expression . LOWER expression
    (25) expression -> expression . GREATER expression
    (26) expression -> expression . NOTEQ expression
    (27) expression -> expression . LOWEREQ expression
    (28) expression -> expression . GREATEREQ expression

    DO              shift and go to state 46
    PLUS            shift and go to state 34
    MINUS           shift and go to state 35
    MULTIPLY        shift and go to state 36
    DIVIDE          shift and go to state 37
    EQUALS          shift and go to state 38
    LOWER           shift and go to state 39
    GREATER         shift and go to state 40
    NOTEQ           shift and go to state 41
    LOWEREQ         shift and go to state 42
    GREATEREQ       shift and go to state 43


state 29

    (5) assignment -> NAME ASSIGN . expression
    (7) input -> NAME ASSIGN . READ
    (15) expression -> . INT
    (16) expression -> . NAME
    (17) expression -> . LEFTBRACKET expression RIGHTBRACKET
    (18) expression -> . MINUS expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression MULTIPLY expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . expression EQUALS expression
    (24) expression -> . expression LOWER expression
    (25) expression -> . expression GREATER expression
    (26) expression -> . expression NOTEQ expression
    (27) expression -> . expression LOWEREQ expression
    (28) expression -> . expression GREATEREQ expression

    READ            shift and go to state 48
    INT             shift and go to state 24
    NAME            shift and go to state 25
    LEFTBRACKET     shift and go to state 26
    MINUS           shift and go to state 27

    expression                     shift and go to state 47

state 30

    (6) show -> PRINT LEFTBRACKET . expression RIGHTBRACKET
    (15) expression -> . INT
    (16) expression -> . NAME
    (17) expression -> . LEFTBRACKET expression RIGHTBRACKET
    (18) expression -> . MINUS expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression MULTIPLY expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . expression EQUALS expression
    (24) expression -> . expression LOWER expression
    (25) expression -> . expression GREATER expression
    (26) expression -> . expression NOTEQ expression
    (27) expression -> . expression LOWEREQ expression
    (28) expression -> . expression GREATEREQ expression

    INT             shift and go to state 24
    NAME            shift and go to state 25
    LEFTBRACKET     shift and go to state 26
    MINUS           shift and go to state 27

    expression                     shift and go to state 49

state 31

    (13) instruction -> WLEFTBRACKET instruction WRIGHTBRACKET .

    WLEFTBRACKET    reduce using rule 13 (instruction -> WLEFTBRACKET instruction WRIGHTBRACKET .)
    IF              reduce using rule 13 (instruction -> WLEFTBRACKET instruction WRIGHTBRACKET .)
    WHILE           reduce using rule 13 (instruction -> WLEFTBRACKET instruction WRIGHTBRACKET .)
    NAME            reduce using rule 13 (instruction -> WLEFTBRACKET instruction WRIGHTBRACKET .)
    PRINT           reduce using rule 13 (instruction -> WLEFTBRACKET instruction WRIGHTBRACKET .)
    $end            reduce using rule 13 (instruction -> WLEFTBRACKET instruction WRIGHTBRACKET .)
    WRIGHTBRACKET   reduce using rule 13 (instruction -> WLEFTBRACKET instruction WRIGHTBRACKET .)
    ELSE            reduce using rule 13 (instruction -> WLEFTBRACKET instruction WRIGHTBRACKET .)


state 32

    (14) instruction -> WLEFTBRACKET code WRIGHTBRACKET .

    WLEFTBRACKET    reduce using rule 14 (instruction -> WLEFTBRACKET code WRIGHTBRACKET .)
    IF              reduce using rule 14 (instruction -> WLEFTBRACKET code WRIGHTBRACKET .)
    WHILE           reduce using rule 14 (instruction -> WLEFTBRACKET code WRIGHTBRACKET .)
    NAME            reduce using rule 14 (instruction -> WLEFTBRACKET code WRIGHTBRACKET .)
    PRINT           reduce using rule 14 (instruction -> WLEFTBRACKET code WRIGHTBRACKET .)
    $end            reduce using rule 14 (instruction -> WLEFTBRACKET code WRIGHTBRACKET .)
    WRIGHTBRACKET   reduce using rule 14 (instruction -> WLEFTBRACKET code WRIGHTBRACKET .)
    ELSE            reduce using rule 14 (instruction -> WLEFTBRACKET code WRIGHTBRACKET .)


state 33
